--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/assign-status/learning-detail/learning-setting/consolidated-report-weakness/student-report/template/result-history.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/assign-status/learning-detail/learning-setting/consolidated-report-weakness/student-report/template/result-history.html
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div>
-                <ul class="ehla-table-list" ng-repeat="history in vm.history" ng-class="[$index % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
+                <ul class="ehla-table-list" ng-repeat="history in vm.history">
                     <li style="width: 50%" >
                         {{history.name}}
                     </li>
