--- a/fuse/src/app/main/users/user/user.html
+++ b/fuse/src/app/main/users/user/user.html
@@ -70,6 +70,9 @@
               <input ng-model="user.password" required="true">
             </md-input-container>
           </div>
+        </div>
+
+        <div layout="row">
           <div layout="column" flex="20">
             <md-input-container>
               <label>New Password</label>
