--- a/fuse/src/app/main/settings/class-setting/class-setting.html
+++ b/fuse/src/app/main/settings/class-setting/class-setting.html
@@ -19,6 +19,10 @@
       <md-button class="md-raised md-background" ng-click="vm.editClass($event)">
         <span>Add Class</span>
       </md-button>
+
+      <md-button class="md-raised md-background" ng-click="vm.importClass($event)">
+        <span>Import Classes</span>
+      </md-button>
     </div>
   </div>
   <!-- / HEADER -->
