--- a/fuse/src/app/main/users/user/user.html
+++ b/fuse/src/app/main/users/user/user.html
@@ -93,7 +93,7 @@
           </div>
           <div layout="column" flex="80">
             <md-input-container>
-              <md-select ng-model="user.roles" multiple="true" required
+              <md-select ng-model="user.roles" required
                          class="normal" placeholder="Roles">
                 <md-optgroup label="Roles">
                   <md-option ng-repeat="role in vm.roles" value="{{role.id}}">
