--- a/fuse/src/app/main/users/users.html
+++ b/fuse/src/app/main/users/users.html
@@ -19,6 +19,10 @@
       <md-button class="md-raised md-accent md-background" ng-click="vm.createUser()">
         <span>Create User</span>
       </md-button>
+
+      <md-button class="md-raised md-background" ng-click="vm.importUsers($event)">
+        <span>Import Users</span>
+      </md-button>
     </div>
   </div>
   <!-- / HEADER -->
