--- a/fuse/src/app/main/users/users.html
+++ b/fuse/src/app/main/users/users.html
@@ -23,6 +23,10 @@
       <md-button class="md-raised md-background" ng-click="vm.importUsers($event)">
         <span>Import Users</span>
       </md-button>
+
+      <md-button class="md-raised md-background" ng-click="vm.exportUsers($event)">
+        <span>Export Users</span>
+      </md-button>
     </div>
   </div>
   <!-- / HEADER -->
